# ATLAS

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  SECURITY.md  VERSION  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: documentation.yml  test.yml
docker/: entrypoint.sh
docs/: commit_template.toml  commit_template.txt  conf.py  index.rst  input.md
docs/_static/css/: custom.css
docs/_templates/: versions.html
docs/source/: ATLAS.core.command_line.rst  ATLAS.core.rst  ATLAS.rst  ATLAS.workflows.dft.rst  ATLAS.workflows.dft.vasp.rst  ATLAS.workflows.rst  MatDBForge.core.command_line.rst  MatDBForge.core.rst  MatDBForge.rst  MatDBForge.workflows.rst  atlas.active_learning.extrapolation.rst  atlas.active_learning.rst  atlas.core.command_line.rst  atlas.core.database.rst  atlas.core.rst  atlas.rst  atlas.workflows.datatypes.rst  atlas.workflows.dft.rst  atlas.workflows.dft.vasp.rst  atlas.workflows.rst  customization.md  input.md  input_active_learning.md  input_database_generation.md  input_dft.md  input_dft_benchmark.md  input_latent_space_analysis.md  input_mlip_benchmarks.md  install.md  intro.md  modules.rst  results_db_gen.md  tools.md
src/MatDBForge/: __init__.py
src/MatDBForge/active_learning/: active_learning_utils.py  conversion.py  mace_tools_aiida.py  report_utils.py  run_ase_active_learning.py
src/MatDBForge/active_learning/dashboard/: training_dashboard.py  training_dashboard_flask.py
src/MatDBForge/active_learning/eval_test_db/: eval_test_db.py
src/MatDBForge/active_learning/extrapolation/: __init__.py  autoencoder.py  autoencoder_tools_aiida.py  concave_hull.py  morphological_closing.py  quadtree.py  train_autoencoder.py
src/MatDBForge/active_learning/mace_code/: mace_get_descriptors.py
src/MatDBForge/active_learning/md/: ase_calculators.py  mdb_process_structure.py
src/MatDBForge/active_learning/safeguard/: safeguard_utils.py
src/MatDBForge/benchmarks/: benchmark_utils.py  gen_results_df.py  gen_test_dirs.py  plot_dft_tests.py  read_result_dataframe.ipynb
src/MatDBForge/benchmarks/mlip/: evaluate_mlip_performance.py  mlip_benchmark_utils.py  mlip_benchmarks.py
src/MatDBForge/core/: __init__.py  clusters.py  code_utils.py  command_line.py  exceptions.py  initial_db.py  initial_db_utils.py  phase_diagram.py  structure.py  surfaces.py  utils.py
src/MatDBForge/core/command_line/: __init__.py  active_learning.py  cli_active_learning.py  cli_dashboard.py  cli_db_analysis.py  cli_generate_configuration_file.py  cli_generate_docs.py  cli_generate_init_db.py  cli_latent_space_analysis.py  cli_run_initial_config.py  cli_train_autoencoder.py  command_line_utils.py  dashboard.py  generate_init_db.py  run_initial_config.py
src/MatDBForge/core/database/: diversity_metrics.py  metrics.py
src/MatDBForge/core/filtering/: structure_filters.py
src/MatDBForge/data/: active_learning.json  config_schema.yaml  layout.tcss
src/MatDBForge/data/Cu_Ni/: 11  12  15  17  19  21  25  27  28  3  34  36  37  38  39  4  40  42  45  48  49  52  53  54  55  59  62  69  7  72  74  76
src/MatDBForge/data/Zn/: 10  103  105  106  109  112  115  116  119  120  124  125  14  15  18  21  23  24  26  30  32  37  38  39  40  44  45  47  48  51  52  56  60  62  63  65  66  68  69  70  (+9 more)
src/MatDBForge/data/input_files/: active_learning_settings.toml  database_generation_settings.toml  dft_settings.toml  input.lammps  simple_active_learning_settings.toml
src/MatDBForge/data/vdw-data/: Ag  Au  Ba_sv  Bi  Cd  Cr  Cs_sv  Cu  H  Li  Mg_sv  Mo  N  Na  Na_sv  Ni  O  Os  P  Pd  Ru  S  Se  Sn  Te  Ti
src/MatDBForge/examples/: create_init_db_new.py  gen_clusters.py  gen_surface_slabs.py  gen_surface_slabs_pymatgen.py  launch_bulk_calcs_db_aiida.py  launch_cluster_calcs_db_aiida.py  launch_sp_calcs_db_aiida.py  launch_surface_calcs_db_aiida.py  run_active_learning_toml.py
src/MatDBForge/training/: conversion.py  gen_mace_input.py
src/MatDBForge/workflows/: __init__.py  active_learning.py  aiida_utils.py  monitors.py  simple_active_learning.py
src/MatDBForge/workflows/datatypes/: __init__.py  aiida_cli.py  image_types.py  mlip.py
src/MatDBForge/workflows/dft/: __init__.py
src/atlas/: __init__.py
src/atlas/active_learning/: __init__.py  active_learning_utils.py  conversion.py  mace_tools_aiida.py  report_utils.py  selection_insight.py
src/atlas/active_learning/backends/: __init__.py  allegro.py  ase_backend.py  base.py  containers.py  deepmd.py  equiformer.py  lasp.py  mace.py  nequip.py  orb.py  registry.py
src/atlas/active_learning/dashboard/: training_dashboard_flask.py
src/atlas/active_learning/eval_test_db/: eval_test_db.py
src/atlas/active_learning/extrapolation/: autoencoder.py  autoencoder_tools_aiida.py  concave_hull.py  morphological_closing.py  quadtree.py  train_autoencoder.py
src/atlas/active_learning/md/: ase_calculators.py  atl_process_structure.py  enhanced_sampling.py  md_utils.py  mdb_process_structure.py
src/atlas/benchmarks/: __init__.py  benchmark_utils.py
src/atlas/core/: __init__.py  adsorption.py  clusters.py  code_utils.py  exceptions.py  initial_db.py  phase_diagram.py  structure.py  surfaces.py  utils.py
src/atlas/data/: active_learning.json  config_schema.yaml  layout.tcss
src/atlas/examples/: run_active_learning_toml.py
src/atlas/training/: gen_mace_input.py
src/atlas/workflows/: active_learning.py  aiida_utils.py  monitors.py  simple_active_learning.py
tests/: __init__.py  conftest.py  test_adsorption.py  test_al_page.py  test_autoencoder.py  test_backend_containers.py  test_backends.py  test_clusters.py  test_code_utils.py  test_concave_hull.py  test_diversity_metrics.py  test_enhanced_sampling.py  test_exceptions.py  test_gen_db.py  test_kpoints.py  test_phase_diagram.py  test_quadtree.py  test_selection_insight.py  test_structure.py  test_structure_filters.py  test_structure_viewer.py  test_surfaces.py
(+265 files in other folders)
