[build-system]
requires = ["setuptools", "wheel", "setuptools-git-versioning", 'pip']
build-backend = "setuptools.build_meta"

[project]
name = "MatDBForge"
dynamic = ["version"]
description = "An automatic workflow for generating data and training NNPs"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Pol Sanz", email = "psanz@iciq.es" },
    { name = "Lulu Li", email = "lli@iciq.es" },
    { name = "Zan Lian", email = "zanlian@stanford.edu" },
]

dependencies = [
    "ase",
    "dscribe==2.1.0",
    "gunicorn==23.0.0",
    "matplotlib==3.8.0",
    "mp_api>=0.45.3",
    "pandas",
    "plotly==5.18.0",
    "pymatgen==2024.10.3",
    "python-slugify[unidecode]",
    "PyYAML",
    "rich==13.7.0",
    "scipy>=1.16.1",
    "seaborn==0.13.2",
    "e3nn==0.4.4",
    "aiida-core==2.6.2",
    "aiida-lammps==1.0.1",
    "aiida-vasp==4.1.0",
    "wonderwords==2.2.0",
    "shapely",
    "pymatgen",
    "flask",
    "wandb",
    "tomli >= 1.1.0 ; python_version < '3.11'",
    'qrcode',
]

[project.optional-dependencies]
dev = ["pre-commit", "pytest", "pytest-cov", "commitizen==4.1.1", "ipdb"]
mace = [
    "mace-torch==0.3.14",
    "torch==2.5.0",
    "cuequivariance",
    "cuequivariance-torch",
    "cuequivariance-ops-torch-cu12",
]

[project.urls]
Homepage = "https://github.com/pol-sb/MatDBForge"

[project.entry-points."aiida.calculations"]
"mdb-autoencoder-train" = "MatDBForge.active_learning.extrapolation.autoencoder_tools_aiida:TrainAutoencoderCalculation"
"mdb-get-latent-space" = "MatDBForge.active_learning.extrapolation.autoencoder_tools_aiida:GetLatentSpaceAutoencoderCalculation"
"mdb-get-concave-hull" = "MatDBForge.active_learning.extrapolation.autoencoder_tools_aiida:GetConcaveHullCalculation"
"mdb-descriptors-combined" = "MatDBForge.active_learning.mace_tools_aiida:GetDescriptorsCombinedCalculation"
"mace-train" = "MatDBForge.active_learning.mace_tools_aiida:TrainMACEModelCalculation"
"mace-get-descriptors" = "MatDBForge.active_learning.mace_tools_aiida:GetMACEDescriptorsCalculation"
"mace-eval" = "MatDBForge.active_learning.mace_tools_aiida:EvaluateMACEConfigsCalculation"
"mace-lammps-gpu-md" = "MatDBForge.active_learning.mace_tools_aiida:RunMDCalculationGPULAMMPSMACE"
"mace-committee-eval" = "MatDBForge.active_learning.mace_tools_aiida:CheckMACECommitteeResultsCalculation"

"mdb-process-md-seed-struct" = "MatDBForge.active_learning.mace_tools_aiida:ProcessMDSeedStructCalculation"

[project.entry-points."aiida.calculations.monitors"]
"monitor.davwarning" = "MatDBForge.workflows.monitors:output_monitor"

[project.entry-points."aiida.workflows"]
"mdb-active-learning" = "MatDBForge.workflows.active_learning:ActiveLearningWorkChain"
"mdb-active-learning-base" = "MatDBForge.workflows.active_learning:ActiveLearningBaseWorkChain"
"mdb-simple-active-learning" = "MatDBForge.workflows.simple_active_learning:SimpleActiveLearningWorkChain"
"mdb-simple-active-learning-base" = "MatDBForge.workflows.simple_active_learning:SimpleActiveLearningBaseWorkChain"


[project.entry-points."aiida.parsers"]
"mdb-autoencoder-train-parser" = "MatDBForge.active_learning.extrapolation.autoencoder_tools_aiida:TrainAutoencoderCalculationParser"
"mdb-get-latent-space-parser" = "MatDBForge.active_learning.extrapolation.autoencoder_tools_aiida:GetLatentSpaceAutoencoderCalculationParser"
"mdb-get-concave-hull-parser" = "MatDBForge.active_learning.extrapolation.autoencoder_tools_aiida:GetConcaveHullCalculationParser"
"mace-training-parser" = "MatDBForge.active_learning.mace_tools_aiida:TrainMACEModelCalculationParser"
"mace-descriptors-parser" = "MatDBForge.active_learning.mace_tools_aiida:GetMACEDescriptorsCalculationParser"
"mace-eval-parser" = "MatDBForge.active_learning.mace_tools_aiida:EvaluateMACEConfigsCalculationParser"
"mace-committee-eval-parser" = "MatDBForge.active_learning.mace_tools_aiida:CheckMACECommiteeResultsCalculationParser"
"mace-lammps-raw-parser" = "MatDBForge.active_learning.mace_tools_aiida:LAMMPSMACERawParser"
"mdb-process-md-seed-struct-parser" = "MatDBForge.active_learning.mace_tools_aiida:ProcessMDSeedStructCalculationParser"
"mdb-descriptors-combined-parser" = "MatDBForge.active_learning.mace_tools_aiida:GetDescriptorsCombinedParser"

[project.scripts]
"mdb_active_learning" = "MatDBForge.core.command_line.cli_active_learning:run_active_learning"
"mdb_gen_configuration_file" = "MatDBForge.core.command_line.cli_generate_configuration_file:gen_default_config"
"mdb_gen_docs" = "MatDBForge.core.command_line.cli_generate_docs:generate_docs"
"mdb_monitor_al_loop" = "MatDBForge.core.command_line.cli_dashboard:monitor_al_loop"
"mdb_gen_init_db" = "MatDBForge.core.command_line.cli_generate_init_db:run_gen_initial_database"
"mdb_init_setup" = "MatDBForge.core.command_line.cli_run_initial_config:run_initial_config"
"mdb_train_autoencoder" = "MatDBForge.core.command_line.cli_train_autoencoder:run_train_autoencoder"
"mdb_run_dft_database" = "MatDBForge.workflows.dft.vasp.aiida_run_vasp_dft_database:main"
"mdb_benchmark_mlip" = "MatDBForge.benchmarks.mlip.evaluate_mlip_performance:main"

[tool.setuptools]
include-package-data = true
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools-git-versioning]
enabled = true
version_file = "VERSION"
count_commits_from_version_file = true
dev_template = "{tag}.post{ccount}"
dirty_template = "{tag}.post{ccount}+git-{branch}-{sha}"


[tool.commitizen]
name = "cz_customize"
version = "0.42.0"
changelog_incremental = true
update_changelog_on_bump = true
version_files = [
    "./src/MatDBForge/__init__.py",
    "./docs/conf.py:release",
    "pyproject.toml:version",
    "VERSION",
    "CITATION.cff:^version",
]
template = "./docs/commit_template.txt"

[tool.commitizen.customize]
#message_template = "{{change_type}}:{% if show_message %} {{message}}{% endif %}"
#example = "feature: this feature enable customize through config file"
#schema = "<type>: <body>"
# schema_pattern = "(feat|fix|chore|docs):(\\s.*)"
message_template = "{{change_type}}{% if scope %}({{scope}}){% endif %}:{% if show_message %} {{message}}{% endif %}"
example = "feat(al_loop): this feature enables MD simulations using ASE."
schema = "<type>(<scope>): <body>"
schema_pattern = "(feat|fix|chore|docs|refactor|perf|style|test)(\\([^)]+\\))?:(\\s.*)"
bump_pattern = "^(break|new|fix|hotfix|feat|chore|docs)"
bump_map = { "break" = "MAJOR", "new" = "MINOR", 'feat' = "MINOR", "fix" = "PATCH", "hotfix" = "PATCH", 'chore' = "PATCH", 'docs' = "PATCH", 'test' = "PATCH", 'refactor' = "PATCH", 'perf' = "PATCH", 'style' = "PATCH" }
change_type_order = [
    "BREAKING CHANGE",
    "feat",
    "fix",
    "refactor",
    "perf",
    'docs',
    'style',
    'test',
    'chore',
]


commit_parser = "^(?P<change_type>feat|fix|chore|docs|refactor|perf|style|test)(?:\\((?P<scope>[^)]+)\\))?:\\s(?P<message>.+)$"
changelog_pattern = "^(feat|fix|docs|chore|refactor|perf|style|test)?(!)?"
change_type_map = { "feat" = "Feature", "fix" = "Fix", "chore" = "Misc", "docs" = "Docs", "refactor" = "Refactor", "perf" = "Performance", "style" = "Style", "test" = "Test" }

[[tool.commitizen.customize.questions]]
type = "list"
name = "change_type"
choices = [
    # The 'value' should match what your patterns expect, e.g., 'feat', 'fix'
    { value = "feat", name = "feat: ✨ A new feature." },
    { value = "fix", name = "fix: 🐛 A bug fix." },
    { value = "docs", name = "docs: 📚 Documentation changes." },
    { value = "style", name = "style: 💄 Code style changes (formatting, etc.)." },
    { value = "refactor", name = "refactor: ♻️ Code changes that neither fix a bug nor add a feature." },
    { value = "perf", name = "perf: 🚀 A code change that improves performance." },
    { value = "test", name = "test: ✅ Adding missing tests or correcting existing tests." },
    { value = "chore", name = "chore: 🧹 Other changes that don't modify src or test files (build, CI, etc.)." },
]
message = "Select the type of change you are committing"

[[tool.commitizen.customize.questions]]
type = "list"
name = "scope"
choices = [
    { value = "", name = "none: ❌ No specific scope." },
    { value = "al_loop", name = "al_loop: 🔁 Changes to the active learning loop." },
    { value = "schema", name = "schema: ⚙️ Changes to the input/documentation schema." },
    { value = "report", name = "report: 📊 Changes to the report part." },
    { value = "core", name = "core: ⚙️ Changes to general or core functionality." },
    { value = "md", name = "md: ⚛️ Changes to MD calculators and scripts." },
    { value = "dft", name = "dft: ⚛️ Changes related to DFT calculators." },
    { value = "init_db", name = "init_db: 💾 Changes to the initial database, structures and phase diagrams." },
    { value = "domain_validity", name = "domain_validity: 📉 Changes to interpolation, extrapolation, dim. reduction..." },
    { value = "benchmarks", name = "benchmarks: 📊 Changes to MLIP benchmarks and model testing..." },
]
message = "What is the scope of this change? (component)"

[[tool.commitizen.customize.questions]]
type = "input"
name = "message"
message = "Write a short and imperative summary of the changes (e.g., add new DFT calculator)"

[[tool.commitizen.customize.questions]]
type = "confirm"
name = "show_message"
message = "Do you want to add this summary as the commit body?"
default = true


[tool.ruff]
# same as black
line-length = 88
indent-width = 4

# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
lint.select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    "D",
]

# Allow fix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["ALL"]
lint.unfixable = []

# Some settings to ignore:          # REMOVE # REMOVE # REMOVE
lint.ignore = ["D417", "D401", "D205", "D102", "D103", "D105", "UP038"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pycodestyle]
max-line-length = 88

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 60
indent-style = "space"
quote-style = "single"
